samples/_failures_safe/1761225568_0cf6f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d78f3ede.c: In function ‘main’:
./samples/SAFE/__tmp_d78f3ede.c:161:5: error: expected expression at end of input
  161 |     if (scanf("%d", &start) != 1 || start < 0 ||
      |     ^~
./samples/SAFE/__tmp_d78f3ede.c:161:5: error: expected declaration or statement at end of input
